Working on /feed events

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,14 @@
     @apply border-2 border-red-600 animate-shake p-2;
   }
 }
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
