add neon sign components
### Reference

- <https://youtu.be/Qj0Qx8HpNUo> ([code](https://github.com/kevin-powell/css-parallax))

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,3 +55,24 @@
     src: url(/fonts/ohm/OHM-Medium.woff) format('woff');
   }
 }
+
+@keyframes parallax {
+  to {
+    transform: translateY(calc(var(--parallax-speed) * 200px));
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  @keyframes parallax {
+    to {
+      transform: translateY(0);
+    }
+  }
+}
+
+/* TODO: Think of something better for neon sign in mobile dimensions. */
+@media (max-width: 720px) {
+  .neon-sign {
+    display: none;
+  }
+}
