--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,7 +102,8 @@
 
 @keyframes parallax-effect {
   to {
-    transform: translateY(calc(var(--parallax-speed) * 200px));
+    opacity: 0;
+    transform: translateY(calc(var(--parallax-speed) * 100px));
   }
 }
 
