--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,6 +90,10 @@
   opacity: 1;
 }
 
+.neon-sign:hover span {
+  animation: none;
+}
+
 .neon-sign span {
   color: transparent;
   writing-mode: vertical-rl;
@@ -102,6 +106,52 @@
   font-weight: 700;
   pointer-events: none;
   user-select: none;
+  animation: flicker 5s infinite var(--flicker-delay, 0s);
+}
+
+@keyframes flicker {
+  0% {
+    opacity: 0.1;
+  }
+
+  2% {
+    opacity: 1;
+  }
+
+  8% {
+    opacity: 0.1;
+  }
+
+  9% {
+    opacity: 1;
+  }
+
+  12% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  30% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0.7;
+  }
+  72% {
+    opacity: 0.2;
+  }
+
+  77% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.9;
+  }
 }
 
 @keyframes parallax-effect {
