--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,7 +89,8 @@
   animation-timeline: scroll();
   border-radius: 0.5rem;
   outline: 2px solid #fff;
-  box-shadow: 0 0 25px 4px var(--border-color),
+  box-shadow:
+    0 0 25px 4px var(--border-color),
     0 0 25px 4px var(--border-color) inset;
   padding: 0.5rem;
   z-index: var(--z-index);
