--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -191,7 +191,7 @@
   }
 }
 
-.fullypacks-title {
+.feed-title {
   color: #d9d9d9;
   text-shadow: 0px 0px 8px #2400ff;
   -webkit-text-stroke-width: 1.2px;
