--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -189,4 +190,16 @@
   .neon-sign {
     display: none;
   }
+}
+
+.feed-title {
+  color: #d9d9d9;
+  text-shadow: 0px 0px 8px #2400ff;
+  -webkit-text-stroke-width: 1.2px;
+  -webkit-text-stroke-color: #002aff;
+  font-family: 'Train One';
+  font-size: 49px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
