fix the feed mobile layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -199,7 +199,7 @@
   -webkit-text-stroke-width: 1.2px;
   -webkit-text-stroke-color: #002aff;
   font-family: 'Train One';
-  font-size: 49px;
+  font-size: 2.5rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
