chore: make stars bg svg (reduce size), tweak moon responsiveness

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,7 +76,7 @@
       rgba(32, 28, 51, 0) 85%,
       #201c33 100%
     ),
-    url("/assets/stars-background.png") no-repeat center;
+    url("/assets/stars-background.svg") no-repeat center;
   background-size: cover;
   overflow: hidden;
 }
