--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,6 +85,10 @@
   background: radial-gradient(50% 50% at 50% 50%, #60549980, #201c33 70.69%);
 }
 
+.custom-text-shadow {
+  text-shadow: 0 0 10px #97bae1;
+}
+
 .feed-title {
   color: #d9d9d9;
   text-shadow: 0px 0px 8px #2400ff;
