--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,22 +117,17 @@ body {
   color: #72d6e6;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #99dbe6;
-  font-size: 48px;
+  font-size: 2.5rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-shadow: 0 0 5px #97bae1;
 }
 
-.feed-title-white {
-  color: #d9d9d9;
-  text-shadow: 0px 0px 8px #2400ff;
-  -webkit-text-stroke-width: 0;
-  -webkit-text-stroke-color: #ffffff;
-  font-size: 49px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+@media screen and (min-width: 640px) {
+  .feed-title {
+    font-size: 3.5rem;
+  }
 }
 
 .animate-tilt {
