FullyHacks Feed 2025 - FullyPacks (#126)
* update

* add lightspeed effect and refactor components

refactor
update lightspeed effect
add experimental lightspeed effect
update fullypacks cards design
remove magic numbers

* use context provider for lightspeed effect

* remove old constants

* remove old globals

* update max card width

* update page sizes

---------

Co-authored-by: spicycurrey <spiceycurrey@gmail.com>

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -175,3 +175,20 @@ body {
     background-position: 15% 50%;
   }
 }
+
+@keyframes starfield {
+  0% {
+    transform: translate(0, 0) scale(0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0.8;
+  }
+  100% {
+    transform: var(--final-position) scale(3);
+    opacity: 0;
+  }
+}
